--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -161,18 +161,18 @@ div{
 }
 
 .main-content{
-  padding-top: 30px!important;
-    padding-bottom: 30px!important;
+  padding-top: 30px ;
+    padding-bottom: 30px ;
     float: right;
     font-size: 16px;
-    padding: 90px 0px 0 0px;
+    padding: 30px 90px 0 40px;
+
 }
-@media screen and (min-width: 480px){
-  .main-content{
-    padding: 90px 90px 0 40px;
 
+@media (max-width: 768px) {
+  .main-content {
 
-
+    padding: 60px 0px 0 0px;
 
   }
 }
@@ -214,17 +214,33 @@ section.hm-col1 .col-md-6 p {
     float: left;
 }
 .second-main-content {
-  padding-left: 26px;
+  padding-left: 40px;
   padding-right: 40px;
 }
+@media (max-width:768px) {
+  .second-main-content {
 
+  }
+}
+/* 
 .text-block .text-block-heading {
   font-size: 32px;
   color: #000;
   font-weight: 800;
+} */
+
+.text-block .text-block-heading {
+  font-size: 32px; /* Default font size */
+  color: #000;
+  font-weight: 800;
 }
 
-
+/* Use responsive utility classes to adjust font size for mobile screens */
+@media (max-width: 768px) {
+  .text-block .text-block-heading {
+    font-size: 20px !important; /* Adjust font size for mobile screens */
+  }
+}
 
 section.process {
   text-align: center;
@@ -241,9 +257,23 @@ section.process h2 {
   letter-spacing: 1px;
   line-height: 44px;
 }
+@media (max-width: 768px) {
+  section.process h2 {
+    font-size: 20px ; 
+  line-height: 24px;
+  /* Adjust font size for mobile screens */
+  }
+}
 section.process h2+p {
   font-size: 20px;
   margin-bottom: 43px;
+}
+@media (max-width: 768px) {
+  section.process h2+p  {
+    font-size: 17px ; 
+  line-height: 24px;
+  /* Adjust font size for mobile screens */
+  }
 }
 
 .owl-carousel .owl-stage-outer {
@@ -256,6 +286,13 @@ section.process h2+p {
   transition: all 0s ease 0s;
   width: 1140px;
 }
+@media (max-width:768px) {
+  .owl-stage {
+    width: 100%;
+
+  }
+
+}
 .owl-carousel .owl-item {
   min-height: 1px;
   float: left;
@@ -264,6 +301,16 @@ section.process h2+p {
 }
 .owl-item{
   width: 285px;
+  margin-bottom: 0px;
+}
+@media (max-width:768px) {
+  .owl-item{
+    width: 100%;
+  margin-bottom: 20px;
+
+
+  }
+
 }
 section.process .item {
   text-align: left;
@@ -297,11 +344,25 @@ section.portfolio h2, section.services h2 {
   font-weight: 900;
   margin-bottom: 18px;
 }
+@media (max-width:768px) {
+  section.portfolio h2 {
+  font-size: 31px !important;
+
+  }
+
+}
 section.portfolio h2+p, section.services h2 span {
   color: #5a5a5a;
   font-size: 18px;
   font-weight: 700;
   margin-bottom: 52px;
+}
+@media (max-width:768px) {
+  section.portfolio h2+p {
+  font-size: 15px !important;
+
+  }
+
 }
 
 .fil-cat{
@@ -316,6 +377,13 @@ section.portfolio h2+p, section.services h2 span {
     letter-spacing: .5px;
     /* border:1px solid red; */
 }
+@media (max-width:768px) {
+  .fil-cat{
+    font-size: 15px;
+
+  }
+
+}
 .fil-cat:hover, .fil-cat-hover {
   color: #000!important;
   border-bottom-color: #c52026!important;
@@ -326,7 +394,15 @@ a.btn-blue-border {
   color: #2154ed;
   font-size: 17px;
   font-weight: 600;
-  ;
+  width: 100% !important;
+  
+
+}
+
+@media (max-width:768px) {
+  a.btn-blue-border {
+    width: 100% !important;
+  }
 }
 
 section.services {
@@ -340,11 +416,23 @@ section.portfolio h2, section.services h2 {
   font-weight: 900;
   margin-bottom: 18px;
 }
+@media (max-width:768px) {
+  section.services h2 {
+  font-size: 31px;
+
+  }
+}
 section.services h2 span {
   color: #5a5a5a;
   font-size: 18px;
   font-weight: 700;
   margin-bottom: 52px;
+}
+@media (max-width:768px) {
+  section.services h2 span  {
+  font-size: 15px;
+
+  }
 }
 section.services h2 span {
   display: block;
@@ -437,12 +525,28 @@ section.footer-form {
   text-align: center;
   position: relative;
 }
+@media (max-width:768px) {
+  section.footer-form{
+    padding: 30px 10px;
+
+  }
+
+}
 section.footer-form h2 {
   color: #000;
   margin-bottom: 11px;
   font-size: 49px;
   font-weight: 800;
 }
+@media (max-width:768px) {
+  section.footer-form h2 {
+    font-size: 23px;
+
+
+  }
+
+}
+
 section.footer-form h2+p {
   font-size: 15px;
   line-height: 23px;
@@ -454,17 +558,46 @@ section.testimonial-col {
   color: #000;
   text-align: center;
 }
+
+@media (max-width:768px) {
+  section.testimonial-col{
+  margin-top: 0px;
+  padding: 40px 15px;
+
+
+  }
+    
+}
 section.testimonial-col h2 {
   font-size: 52px;
   text-transform: capitalize;
   font-weight: 800;
   margin-bottom: 13px;
 }
+@media (max-width:768px) {
+  section.testimonial-col h2{
+    font-size: 31px;
+
+
+
+  }
+    
+}
 section.testimonial-col h2+p {
   font-size: 21px;
   margin-bottom: 40px;
   line-height: 24px;
   font-weight: 500;
+}
+@media (max-width:768px) {
+  section.testimonial-col h2+p{
+    font-size: 15px;
+
+
+
+
+  }
+    
 }
 .slick-item{
   display:  flex !important;
@@ -484,6 +617,13 @@ footer h2 {
   margin-bottom: 20px;
 }
 
+@media (max-width:768px){
+  footer h2 {
+
+  font-size: 32px;
+  }
+}
+
 .btn-footer{
   padding: 14px 40px;
   color: #fff;
@@ -491,12 +631,15 @@ footer h2 {
   background: #c52026;
   display: inline-block;
   font-weight: 600;
-  margin-top: 20px;
+  margin-top:   0px;
+  display: flex;
+  justify-content: center ;
   
 }
-@media screen and (min-width: 480px){
+@media  (max-width: 768px){
   .btn-footer{
     margin-top: 0px;
+    width: 100%;
 
 
 
@@ -529,6 +672,17 @@ a{
   -o-transition: all .2s ease-in;
   -ms-transition: all .2s ease-in;
   transition: all .2s ease-in;
+  
+}
+.input-type-textarea{
+  height: 187px;
+
+}
+@media screen and (max-width: 768px) {
+ .input-type-textarea{
+    height: 87px;
+
+  }
 }
 
 .input-type:focus{
@@ -583,6 +737,13 @@ a{
     font-family: Georgia,Times,"Times New Roman",serif;
     font-style: italic;
 }
+@media (max-width:768px){
+  .carousel-review{
+    padding: 0 15px;
+
+  font-size: 16px;
+}
+}
 span.author-name {
   display: block;
   font-weight: 800;
@@ -605,12 +766,34 @@ span.author-name strong {
   margin-bottom: 10px;
   line-height: 40px;
 }
+@media (max-width:768px){
+  .popup-content h2{
+  font-size: 22px;
+
+  }
+}
 .popup-content h2+p {
   line-height: 19px;
   font-size: 15px;
   margin-bottom: 22px;
   font-weight: 600;
   line-height: 1.3 !important;
+}
+@media (max-width:768px){
+  .popup-content h2+p {
+  font-size: 13px;
+
+  }
+}
+
+.fancybox-close-small {
+  right: -12px;
+  top: -18px;
+  width: 35px!important;
+  padding: 19px!important;
+  /* background: url(../images/popup-close.png) no-repeat; */
+  height: 42px!important;
+  position: absolute;
 }
 
 
